# apps/backend/src/modules/lobby/dto/join-lobby.dto.ts
@@ -1,7 +1,0 @@
-import { IsOptional, IsString } from "class-validator";
-
-export class JoinLobbyDto {
-  @IsOptional()
-  @IsString()
-  nickname?: string;
-}
