# apps/backend/src/modules/matchmaking/dto/join-match.dto.ts
@@ -1,4 +1,0 @@
-export class JoinMatchDto {
-  clientSessionId!: string;
-  preferredRole?: "player" | "spectator";
-}
